--- a/src/styles/partials/project.sass
+++ b/src/styles/partials/project.sass
@@ -1,13 +1,13 @@
 .work-project
         display: inherit
-        grid-template-rows: 15% 1fr 10% 1fr auto
+        grid-template-rows: repeat(5, auto)
         justify-items: center
-        margin: 0 0.5em 2em
+        // margin: 0 0.5em 2em
 
         .project-title
             display: grid
             grid-row: 1
-            margin: 0 //1em 0
+            margin: 1em 0
             align-items: center
 
         .project-thumbnail
@@ -20,7 +20,7 @@
             grid-row: 3
             list-style: none
             padding: 0
-            margin: 0 //0.6em 0
+            margin: 0.6em 0
             align-self: center
 
             li
@@ -51,4 +51,4 @@
             
         // TABLET
         @media screen and (min-width: $tablet) and (max-width: $desktop - 1) and (min-height: $tablet)
-            margin: 0 1em 2em
+            // margin: 0 1em 2em
